// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Form /> should render form with highlighted label when has focus 1`] = `
.c0 {
  width: 100%;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: auto;
}

.c2:not(:last-child) {
  margin-bottom: 0.7rem;
  margin-right: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0;
  margin-bottom: 0.7rem;
}

.c4 {
  width: 10rem;
  min-height: 1.4rem;
  color: hsl(213,17%,20%);
  text-align: left;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 1.2rem;
  line-height: 1.4rem;
  margin-top: 0.7rem;
  margin-bottom: 0.7rem;
  margin-left: 0.3rem;
  margin-right: 0.5rem;
  margin-left: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1:not(:first-child) {
  margin-top: 0.7rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
  border-color: hsl(200,74%,46%);
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  width: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.6rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c8::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c8::-moz-placeholder {
  font-size: 1.4rem;
}

.c8:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c8::placeholder {
  font-size: 1.4rem;
}

.c8:focus,
.c8:active {
  outline: none;
}

<form
  class="c0"
  name="form"
>
  <div
    class="c1"
    data-testid="form-group"
  >
    <div
      class="c2"
      data-testid="form-field"
      size="1"
    >
      <div
        class="c3"
      >
        <label
          class="c4"
          width="10rem"
        >
          my label 1
        </label>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-container"
              width="25rem"
            >
              <input
                class="c8"
                data-testid="input"
                id=""
                placeholder="tape inside me"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`<Form /> should render form with highlighted label when has focus 2`] = `
<form
  class="sc-bdVaJa fMLCLO"
  name="form"
>
  <div
    class="sc-bZQynM uJaUG"
    data-testid="form-group"
  >
    <div
      class="sc-bwzfXH btkNfP"
      data-testid="form-field"
      size="1"
    >
      <div
        class="sc-htpNat bnmNtp"
      >
        <label
          class="sc-bxivhb bEmEGS"
          width="10rem"
        >
          my label 1
        </label>
        <div
          class="sc-ifAKCX futPH"
        >
          <div
            class="sc-EHOje dYYwli"
          >
            <div
              class="sc-cvbbAY jIVDhY"
              data-testid="input-container"
              width="25rem"
            >
              <input
                class="sc-jWBwVP kCOVHR"
                data-testid="input"
                id=""
                placeholder="tape inside me"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`<Form /> should render form without label without a problem 1`] = `
.c0 {
  width: 100%;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: auto;
}

.c2:not(:last-child) {
  margin-bottom: 0.7rem;
  margin-right: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1:not(:first-child) {
  margin-top: 0.7rem;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  width: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.6rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c7::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c7::-moz-placeholder {
  font-size: 1.4rem;
}

.c7:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c7::placeholder {
  font-size: 1.4rem;
}

.c7:focus,
.c7:active {
  outline: none;
}

<form
  class="c0"
  name="form"
>
  <div
    class="c1"
    data-testid="form-group"
  >
    <div
      class="c2"
      data-testid="form-field"
      size="1"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
              data-testid="input-container"
              width="25rem"
            >
              <input
                class="c7"
                data-testid="input"
                id=""
                placeholder="tape inside me"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c2"
      data-testid="form-field"
      size="1"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          <div
            class="c5"
          >
            <div
              class="c6"
              data-testid="input-container"
              width="25rem"
            >
              <input
                class="c7"
                data-testid="input"
                id=""
                placeholder="tape inside me"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`<Form /> should render row form with inline labels without a problem 1`] = `
.c0 {
  width: 100%;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: auto;
}

.c2:not(:last-child) {
  margin-bottom: 0;
  margin-right: 3.1rem;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0;
  margin-bottom: 0.7rem;
}

.c4 {
  width: 10rem;
  min-height: 1.4rem;
  color: hsl(213,17%,20%);
  text-align: left;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 1.2rem;
  line-height: 1.4rem;
  margin-top: 0.7rem;
  margin-bottom: 0.7rem;
  margin-left: 0.3rem;
  margin-right: 0.5rem;
  margin-left: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1:not(:first-child) {
  margin-top: 1rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  width: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.6rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c8::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c8::-moz-placeholder {
  font-size: 1.4rem;
}

.c8:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c8::placeholder {
  font-size: 1.4rem;
}

.c8:focus,
.c8:active {
  outline: none;
}

<form
  class="c0"
  name="form"
>
  <div
    class="c1"
    data-testid="form-group"
  >
    <div
      class="c2"
      data-testid="form-field"
      size="1"
    >
      <div
        class="c3"
      >
        <label
          class="c4"
          width="10rem"
        >
          my label 1
        </label>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-container"
              width="25rem"
            >
              <input
                class="c8"
                data-testid="input"
                id=""
                placeholder=""
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c2"
      data-testid="form-field"
      size="1"
    >
      <div
        class="c3"
      >
        <label
          class="c4"
          width="10rem"
        >
          my label 2
        </label>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-container"
              width="25rem"
            >
              <input
                class="c8"
                data-testid="input"
                id=""
                placeholder=""
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`<Form /> should render without a problem 1`] = `
.c0 {
  width: 100%;
  height: auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  width: auto;
}

.c2:not(:last-child) {
  margin-bottom: 0.7rem;
  margin-right: 0;
}

.c3 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c4 {
  width: 10rem;
  min-height: 1.4rem;
  color: hsl(213,17%,20%);
  text-align: left;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 1.2rem;
  line-height: 1.4rem;
  margin-top: 0.7rem;
  margin-bottom: 0.7rem;
  margin-left: 0.3rem;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c6 {
  height: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.c1:not(:first-child) {
  margin-top: 0.7rem;
}

.c9 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  max-width: 100%;
  width: auto;
  padding: 0.75rem 1.6rem;
  border-radius: 0.4rem;
  font-size: 1.4rem;
  line-height: 1.57;
  color: hsl(0,100%,100%);
  cursor: pointer;
  outline: none;
  -webkit-transition: background 200ms ease,box-shadow 200ms ease;
  transition: background 200ms ease,box-shadow 200ms ease;
  color: hsl(213,17%,20%);
  background: none;
  padding: 0.75rem 1.6rem;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 25rem;
  height: 4rem;
  overflow: hidden;
  border-radius: 0.4rem;
  border: 1px solid hsl(207,22%,90%);
  background-color: hsl(0,100%,100%);
}

.c8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  height: 100%;
  width: 100%;
  background-color: hsl(0,100%,100%);
  margin: 0 0.7rem;
  border-radius: 0.4rem;
  font-size: 1.6rem;
  border: none;
  padding: 0;
  text-align: left;
}

.c8::-webkit-input-placeholder {
  font-size: 1.4rem;
}

.c8::-moz-placeholder {
  font-size: 1.4rem;
}

.c8:-ms-input-placeholder {
  font-size: 1.4rem;
}

.c8::placeholder {
  font-size: 1.4rem;
}

.c8:focus,
.c8:active {
  outline: none;
}

<form
  class="c0"
  name="form"
>
  <div
    class="c1"
    data-testid="form-group"
  >
    <div
      class="c2"
      data-testid="form-field"
      size="1"
    >
      <div
        class="c3"
      >
        <label
          class="c4"
          width="10rem"
        >
          my label
        </label>
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <div
              class="c7"
              data-testid="input-container"
              width="25rem"
            >
              <input
                class="c8"
                data-testid="input"
                id=""
                placeholder="tape inside me"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c2"
      data-testid="form-field"
      size="1"
    >
      <div
        class="c3"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
          >
            <button
              class="c9"
              type="submit"
            >
              Hello
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;
